--- a/index.html
+++ b/index.html
@@ -18,10 +18,21 @@
                 </div>
                 <div class="nav-content">
                     <ul>
-                        <li><a href="">Sobre nosotros</a></li>
-                        <li><a href="">Trabajos a medida</a></li>
+                        <li><a href="Servicios.html">Trabajos</a></li>
+                        <li><a href="#sobre-nosotros">Sobre nosotros</a></li>
+                        <li><a href="#completed-projects">Proyectos</a></li>
                         <li><a href="#contacto">Contacto</a></li>
                     </ul>
+                </div>
+            </div>
+            <div class="dropdown">
+                <img onclick="toggleDropdown()" class="dropbtn" src="/img/menu.png" salt="">
+                <!-- <img onclick="toggleDropdown()" class="dropbtn" src="/img/cerrar.png" salt=""> -->
+                    <div id="myDropdown" class="dropdown-content">
+                    <a href="#">Trabajos</a>
+                    <a href="#sobre-nosotros">Sobre nosotros</a>
+                    <a href="#completed-projects">Proyectos</a>
+                    <a href="#contacto">Contacto</a>
                 </div>
             </div>
         </nav>
@@ -36,6 +47,16 @@
         </div>
     </header>
     <main>
+    <section id="sobre-nosotros">
+        <div>
+            <h1>Sobre nosotros</h1>
+            <div>
+                <img src="/img/sobre nosotros.jpeg" alt="">
+                <p>Somos una empresa de carpinteria con una trayectoria de hace 2 años, Trabajamos también con hierro, y láseres. Hacemos trabajos a medida con mdf, finger, hierro. Hacemos grabaciones y diseños personalizados con láseres a continuación pueden ver nuestro proceso de trabajo y también algunos de nuestros trabajos realizados</p>
+            </div>
+        </div>
+    </section>
+    <hr>
     <section id="resumen">
         <div id="resumen-container">
             <div class="content-resumen">
